--- a/src/install
+++ b/src/install
@@ -3,7 +3,7 @@
 conf='
 
 ## WAL CONFIG
-import colorscheme from 'wal' asynchronously
+#import colorscheme from 'wal' asynchronously
 # &   # Run the process in the background.
 # ( ) # Hide shell job control messages.
 (cat ~/.cache/wal/sequences &)
